# agent-software-development-shop

./: PRD.md  README.md  pyproject.toml
docs/plans/: 2026-03-15-cli-backends-design.md  2026-03-15-cli-backends.md  2026-03-15-cli-mvp-design.md  2026-03-15-cli-mvp.md  2026-03-16-cross-stage-qa-guardrails-design.md  2026-03-16-cross-stage-qa-guardrails.md
docs/prompts/: 2026-05-05-console-visibility.md
src/asd_shop/: artifacts.py  backend_fallback.py  backend_registry.py  cli.py  config.py  console_events.py  git_audit.py  models.py  prompts.py  roles.py  shell_runner.py  stages.py  storage.py  workflow.py
src/asd_shop/agent_backends/: __init__.py  base.py  claude_cli.py  codex_cli.py  interactive_session.py
src/asd_shop/providers/: __init__.py  base.py  mock.py  openai_compatible.py
tests/: conftest.py  test_artifacts.py  test_backend_fallback.py  test_backend_prompts.py  test_backend_registry.py  test_claude_backend.py  test_cli_approve.py  test_cli_run.py  test_codex_backend.py  test_command_log.py  test_config.py  test_console_events.py  test_e2e_cycle.py  test_failures.py  test_git_audit.py  test_interactive_backends.py  test_mock_provider.py  test_models.py  test_prompts.py  test_roles.py  test_shell_runner.py  test_smoke.py  test_stages.py  test_storage.py  test_workflow.py
