[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asd-shop"
version = "0.1.0"
description = "CLI MVP for an autonomous agentic software development organization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12,<1.0",
    "pydantic>=2.7,<3.0",
    "langgraph>=0.2,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
asd-shop = "asd_shop.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
